--- a/P2_JOURDAIN.html
+++ b/P2_JOURDAIN.html
@@ -17,12 +17,16 @@
             <!--menu nav header-->
             <nav>
                 <ul>
-                    <li id="change_color">Herbergements</li>
-                    <li>
+                    <li id="change_color"> 
+                         <a href="">Herbergements</a>
+                    </li>
+                     <li>
                         <!--add links-->
                         <a href="#">Activités</a>
                     </li>
-                    <li id="change_color" >S'inscrire</li>
+                    <li id="change_color" >
+                       <a href="">S'inscrire</a> 
+                    </li>
                 </ul>
             </nav>
         <img class="logo-header" src="./logo/Reservia.svg" alt="logo_Header">  
@@ -33,11 +37,13 @@
         <p>en plein centre ville ou en pleine nature</p>
         <!--barre de recherche Header-->
         <form class="barre_recherche" method='post' action='....'>
-            <button>
-                <i class="fas fa-map-marker-alt"></i>
-            </button>
-            <input type='text'  id='recherche' name='recherche' placeholder="Marseille,France"> 
-            <button>rechercher</button>
+            <div class="display_researsch">
+                <button class="button_researsch_left">
+                    <i class="fas fa-map-marker-alt"></i>
+                </button>
+                <input class="input_researsch" type='text'  id='recherche' name='recherche' placeholder="Marseille,France"> 
+                <button class="button_researsch_right">rechercher</button>
+            </div>
         </form>  
         <ul class="display_filtre">
             <li class="spacing_filter">filtres</li>
@@ -66,6 +72,18 @@
                 </button>
             </li>
         </ul>
+        <div class="number_logements">
+            <i class="icon_logements fas fa-info"></i>
+            <p> plus de 500 logements sont disponible dans cette ville</p>
+        </div>
+
     </section>
+
+    <main>
+        <article>
+            <div></div>
+        </article>
+    </main>
+
 </body>
 </html>
