--- a/P2_JOURDAIN.html
+++ b/P2_JOURDAIN.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="P2_JOURDAIN.css">
     <script src="https://kit.fontawesome.com/4fa80a1b2e.js" crossorigin="anonymous"></script>
     <link href="/chemin-vers-fontawesome/css/all.css" rel="stylesheet">
+    <title>reservia</title>
 <body>
     </head>
         <!--Header-->
@@ -81,7 +82,21 @@
 
     <main>
         <article>
-            <div></div>
+            <div class="article_hebergements">
+                <h2>Hebergement à Marseille</h2>
+                   <div class="hotel_cannebiére">              
+                         <img class="img_cannebiére" src="./hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="image auberge la cannebiére">
+                       <div class="text_cannebiére">
+                           <h3>Auberge de la cannebiére</h3>
+                           <p>nuit à partir de 25 $</p> 
+                       </div>
+                   </div>
+            </div>
+
+            <div class="article_populaire">
+                <h2>les plus poplulaires</h2>
+                <i class="fas fa-chart-line"></i>
+            </div>
         </article>
     </main>
 
