--- a/P2_JOURDAIN.html
+++ b/P2_JOURDAIN.html
@@ -79,7 +79,6 @@
         </div>
 
     </section>
-
     <main>
         <article>
             <div class="article_hebergements">
@@ -88,7 +87,12 @@
                          <img class="img_cannebiére" src="./hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="image auberge la cannebiére">
                        <div class="text_cannebiére">
                            <h3>Auberge de la cannebiére</h3>
-                           <p>nuit à partir de 25 $</p> 
+                           <p>nuit à partir de <b>25 $</b></p> 
+                           <i id="change_color_star" class="fas fa-star"></i>
+                           <i id="change_color_star" class="fas fa-star"></i>
+                           <i id="change_color_star" class="fas fa-star"></i>
+                           <i id="change_color_star" class="fas fa-star"></i>
+                           <i class="far fa-star"></i>
                        </div>
                    </div>
             </div>
