--- a/P2_JOURDAIN.html
+++ b/P2_JOURDAIN.html
@@ -18,15 +18,15 @@
             <!--menu nav header-->
             <nav>
                 <ul>
-                    <li id="change_color"> 
-                         <a href="">Herbergements</a>
+                    <!--add links-->
+                    <li class="change_color"> 
+                         <a class="change_hypertext" href="#">Herbergements</a>
                     </li>
                      <li>
-                        <!--add links-->
-                        <a href="#">Activités</a>
+                        <a class="change_hypertext1" href="#">Activités</a>
                     </li>
-                    <li id="change_color" >
-                       <a href="">S'inscrire</a> 
+                    <li class="change_color" >
+                       <a class="change_hypertext" href="">S'inscrire</a> 
                     </li>
                 </ul>
             </nav>
@@ -95,7 +95,67 @@
                            <i class="far fa-star"></i>
                        </div>
                    </div>
-            </div>
+                        <div class="hotel_cannebiére">              
+                                <img class="img_cannebiére" src="./hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="image auberge la cannebiére">
+                            <div class="text_cannebiére">
+                                <h3>Auberge de la cannebiére</h3>
+                                <p>nuit à partir de <b>25 $</b></p> 
+                                <i id="change_color_star" class="fas fa-star"></i>
+                                <i id="change_color_star" class="fas fa-star"></i>
+                                <i id="change_color_star" class="fas fa-star"></i>
+                                <i id="change_color_star" class="fas fa-star"></i>
+                                <i class="far fa-star"></i>
+                            </div>
+                        </div>
+                            <div class="hotel_cannebiére">              
+                                    <img class="img_cannebiére" src="./hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="image auberge la cannebiére">
+                                <div class="text_cannebiére">
+                                    <h3>Auberge de la cannebiére</h3>
+                                    <p>nuit à partir de <b>25 $</b></p> 
+                                    <i id="change_color_star" class="fas fa-star"></i>
+                                    <i id="change_color_star" class="fas fa-star"></i>
+                                    <i id="change_color_star" class="fas fa-star"></i>
+                                    <i id="change_color_star" class="fas fa-star"></i>
+                                    <i class="far fa-star"></i>
+                                </div>
+                            </div>
+                                    <div class="hotel_cannebiére">              
+                                        <img class="img_cannebiére" src="./hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="image auberge la cannebiére">
+                                    <div class="text_cannebiére">
+                                        <h3>Auberge de la cannebiére</h3>
+                                        <p>nuit à partir de <b>25 $</b></p> 
+                                        <i id="change_color_star" class="fas fa-star"></i>
+                                        <i id="change_color_star" class="fas fa-star"></i>
+                                        <i id="change_color_star" class="fas fa-star"></i>
+                                        <i id="change_color_star" class="fas fa-star"></i>
+                                        <i class="far fa-star"></i>
+                                    </div>
+                                </div>
+                                        <div class="hotel_cannebiére">              
+                                            <img class="img_cannebiére" src="./hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="image auberge la cannebiére">
+                                        <div class="text_cannebiére">
+                                            <h3>Auberge de la cannebiére</h3>
+                                            <p>nuit à partir de <b>25 $</b></p> 
+                                            <i id="change_color_star" class="fas fa-star"></i>
+                                            <i id="change_color_star" class="fas fa-star"></i>
+                                            <i id="change_color_star" class="fas fa-star"></i>
+                                            <i id="change_color_star" class="fas fa-star"></i>
+                                            <i class="far fa-star"></i>
+                                        </div>
+                                    </div>
+                                        <div class="hotel_cannebiére">              
+                                            <img class="img_cannebiére" src="./hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="image auberge la cannebiére">
+                                        <div class="text_cannebiére">
+                                            <h3>Auberge de la cannebiére</h3>
+                                            <p>nuit à partir de <b>25 $</b></p> 
+                                            <i id="change_color_star" class="fas fa-star"></i>
+                                            <i id="change_color_star" class="fas fa-star"></i>
+                                            <i id="change_color_star" class="fas fa-star"></i>
+                                            <i id="change_color_star" class="fas fa-star"></i>
+                                            <i class="far fa-star"></i>
+                                        </div>
+                                    </div>
+              </div>
 
             <div class="article_populaire">
                 <h2>les plus poplulaires</h2>
