--- a/P2_JOURDAIN.html
+++ b/P2_JOURDAIN.html
@@ -1,207 +1,234 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>P2_JOURDAIN</title>
-		<link rel="preconnect" href="https://fonts.gstatic.com" />
-		<link
-			href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
-			rel="stylesheet"
-		/>
-		<link rel="stylesheet" href="P2_JOURDAIN.css" />
-		<script
-			src="https://kit.fontawesome.com/4fa80a1b2e.js"
-			crossorigin="anonymous"
-		></script>
-		<link href="/chemin-vers-fontawesome/css/all.css" rel="stylesheet" />
-		<title>reservia</title>
-	</head>
 
-	<body>
-		<!--Header-->
-		<header>
-			<!--menu nav header-->
-			<nav>
-				<img class="logo-header" src="./logo/Reservia.svg" alt="logo_Header" />
-				<ul>
-					<!--add links-->
+<head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>P2_JOURDAIN</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+        href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+        rel="stylesheet" />
+    <link rel="stylesheet" href="P2_JOURDAIN.css" />
+    <script src="https://kit.fontawesome.com/4fa80a1b2e.js" crossorigin="anonymous"></script>
+    <link href="/chemin-vers-fontawesome/css/all.css" rel="stylesheet" />
+    <title>reservia</title>
+</head>
 
-					<li class="change_color">
-						<a class="change_hypertext" href="#">Herbergements</a>
-					</li>
-					<li>
-						<a class="change_hypertext1" href="#">Activités</a>
-					</li>
-					<li class="change_color">
-						<a class="change_hypertext" href="">S'inscrire</a>
-					</li>
-				</ul>
-			</nav>
-		</header>
-		<!--Section -->
-		<section>
-			<h1>Trouvez votre hebergement pour des vacances de reves</h1>
-			<p>en plein centre ville ou en pleine nature</p>
+<body>
+    <!--Header-->
+    <header>
+        <!--menu nav header-->
+        <nav>
+            <img class="logo-header" src="./logo/Reservia.svg" alt="logo_Header" />
+            <ul>
+                <!--add links-->
 
-			<!--barre de recherche Header-->
-			<form class="barre_recherche" method="post" action="....">
-				<div class="display_researsch">
-					<button class="button_researsch_left">
-						<i class="fas fa-map-marker-alt"></i>
-					</button>
-					<input
-						class="input_researsch"
-						type="text"
-						id="recherche"
-						name="recherche"
-						placeholder="Marseille,France"
-					/>
-					<button class="button_researsch_right">rechercher</button>
-				</div>
-			</form>
-			<ul class="display_filtre">
-				<li class="spacing_filter">filtres</li>
-				<li class="spacing_filter">
-					<button class="button_filter">
-						<i class="icon_filter fas fa-heart"></i>
-						Economique
-					</button>
-				</li>
-				<li class="spacing_filter">
-					<button class="button_filter">
-						<i class="icon_filter fas fa-heart"></i>
-						Familial
-					</button>
-				</li>
-				<li class="spacing_filter">
-					<button class="button_filter">
-						<i class="icon_filter fas fa-heart"></i>
-						Romantique
-					</button>
-				</li>
-				<li class="spacing_filter">
-					<button class="button_filter">
-						<i class="icon_filter fas fa-dog"></i>
-						Animaux autorisés
-					</button>
-				</li>
-			</ul>
-			<div class="number_logements">
-				<i class="icon_logements fas fa-info"></i>
-				<p> plus de 500 logements sont disponible dans cette ville</p>
-			</div>
-		</section>
-		<main>
-			<h2 class="titre_hebergement">Hebergement à Marseille</h2>
-			<div class="position_hebergement">
-				<div class="article_hebergements">
-					<div class="hotel_cannebiére">
-						<img
-							class="img_cannebiére"
-							src="./hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg"
-							alt="image auberge la cannebiére"
-						/>
-						<div class="text_cannebiére">
-							<h3>Auberge de la cannebiére</h3>
-							<p>nuit à partir de <b>25 $</b></p>
-							<i id="change_color_star" class="fas fa-star"></i>
-							<i id="change_color_star" class="fas fa-star"></i>
-							<i id="change_color_star" class="fas fa-star"></i>
-							<i id="change_color_star" class="fas fa-star"></i>
-							<i class="far fa-star"></i>
-						</div>
-					</div>
-					<div class="hotel_cannebiére">
-						<img
-							class="img_cannebiére"
-							src="./hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg"
-							alt="image auberge la cannebiére"
-						/>
-						<div class="text_cannebiére">
-							<h3>Auberge de la cannebiére</h3>
-							<p>nuit à partir de <b>25 $</b></p>
-							<i id="change_color_star" class="fas fa-star"></i>
-							<i id="change_color_star" class="fas fa-star"></i>
-							<i id="change_color_star" class="fas fa-star"></i>
-							<i id="change_color_star" class="fas fa-star"></i>
-							<i class="far fa-star"></i>
-						</div>
-					</div>
-					<div class="hotel_cannebiére">
-						<img
-							class="img_cannebiére"
-							src="./hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg"
-							alt="image auberge la cannebiére"
-						/>
-						<div class="text_cannebiére">
-							<h3>Auberge de la cannebiére</h3>
-							<p>nuit à partir de <b>25 $</b></p>
-							<i id="change_color_star" class="fas fa-star"></i>
-							<i id="change_color_star" class="fas fa-star"></i>
-							<i id="change_color_star" class="fas fa-star"></i>
-							<i id="change_color_star" class="fas fa-star"></i>
-							<i class="far fa-star"></i>
-						</div>
-					</div>
-					<div class="hotel_cannebiére">
-						<img
-							class="img_cannebiére"
-							src="./hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg"
-							alt="image auberge la cannebiére"
-						/>
-						<div class="text_cannebiére">
-							<h3>Auberge de la cannebiére</h3>
-							<p>nuit à partir de <b>25 $</b></p>
-							<i id="change_color_star" class="fas fa-star"></i>
-							<i id="change_color_star" class="fas fa-star"></i>
-							<i id="change_color_star" class="fas fa-star"></i>
-							<i id="change_color_star" class="fas fa-star"></i>
-							<i class="far fa-star"></i>
-						</div>
-					</div>
-					<div class="hotel_cannebiére">
-						<img
-							class="img_cannebiére"
-							src="./hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg"
-							alt="image auberge la cannebiére"
-						/>
-						<div class="text_cannebiére">
-							<h3>Auberge de la cannebiére</h3>
-							<p>nuit à partir de <b>25 $</b></p>
-							<i id="change_color_star" class="fas fa-star"></i>
-							<i id="change_color_star" class="fas fa-star"></i>
-							<i id="change_color_star" class="fas fa-star"></i>
-							<i id="change_color_star" class="fas fa-star"></i>
-							<i class="far fa-star"></i>
-						</div>
-					</div>
-					<div class="hotel_cannebiére">
-						<img
-							class="img_cannebiére"
-							src="./hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg"
-							alt="image auberge la cannebiére"
-						/>
-						<div class="text_cannebiére">
-							<h3>Auberge de la cannebiére</h3>
-							<p>nuit à partir de <b>25 $</b></p>
-							<i id="change_color_star" class="fas fa-star"></i>
-							<i id="change_color_star" class="fas fa-star"></i>
-							<i id="change_color_star" class="fas fa-star"></i>
-							<i id="change_color_star" class="fas fa-star"></i>
-							<i class="far fa-star"></i>
-						</div>
-					</div>
-					<p>afficher plus</p>
-				</div>
-				<div class="article_populaire">
-					<div class="titre_populaire">
-						<h2>les plus poplulaires</h2>
-						<i class="changement_populaire fas fa-chart-line"></i>
-					</div>
-				</div>
-			</div>
-		</main>
-	</body>
+                <li class="change_color">
+                    <a class="change_hypertext" href="#">Herbergements</a>
+                </li>
+                <li>
+                    <a class="change_hypertext1" href="#">Activités</a>
+                </li>
+                <li class="change_color">
+                    <a class="change_hypertext" href="">S'inscrire</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
+    <!--Section -->
+    <section>
+        <h1>Trouvez votre hebergement pour des vacances de reves</h1>
+        <p>en plein centre ville ou en pleine nature</p>
+
+        <!--barre de recherche Header-->
+        <form class="barre_recherche" method="post" action="....">
+            <div class="display_researsch">
+                <button class="button_researsch_left">
+                    <i class="fas fa-map-marker-alt"></i>
+                </button>
+                <input class="input_researsch" type="text" id="recherche" name="recherche"
+                    placeholder="Marseille,France" />
+                <button class="button_researsch_right">rechercher</button>
+            </div>
+        </form>
+        <ul class="display_filtre">
+            <li class="spacing_filter">filtres</li>
+            <li class="spacing_filter">
+                <button class="button_filter">
+                    <i class="icon_filter fas fa-heart"></i>
+                    Economique
+                </button>
+            </li>
+            <li class="spacing_filter">
+                <button class="button_filter">
+                    <i class="icon_filter fas fa-heart"></i>
+                    Familial
+                </button>
+            </li>
+            <li class="spacing_filter">
+                <button class="button_filter">
+                    <i class="icon_filter fas fa-heart"></i>
+                    Romantique
+                </button>
+            </li>
+            <li class="spacing_filter">
+                <button class="button_filter">
+                    <i class="icon_filter fas fa-dog"></i>
+                    Animaux autorisés
+                </button>
+            </li>
+        </ul>
+        <div class="number_logements">
+            <i class="icon_logements fas fa-info"></i>
+            <p> plus de 500 logements sont disponible dans cette ville</p>
+        </div>
+    </section>
+    <!--article hotel hebergement à Marseille -->
+    <main>
+        <h2 class="titre_hebergement">Hebergement à Marseille</h2>
+        <div class="position_hebergement">
+            <div class="section_hebergements">
+                <div class="hotel_cannebiére">
+                    <img class="img_cannebiére" src="./hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg"
+                        alt="image auberge la cannebiére" />
+                    <div class="text_cannebiére">
+                        <h3>Auberge de la cannebiére</h3>
+                        <p>nuit à partir de <b>25 $</b></p>
+                        <i id="change_color_star" class="fas fa-star"></i>
+                        <i id="change_color_star" class="fas fa-star"></i>
+                        <i id="change_color_star" class="fas fa-star"></i>
+                        <i id="change_color_star" class="fas fa-star"></i>
+                        <i class="far fa-star"></i>
+                    </div>
+                </div>
+                <div class="hotel_cannebiére">
+                    <img class="img_cannebiére" src="./hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg"
+                        alt="image auberge la cannebiére" />
+                    <div class="text_cannebiére">
+                        <h3>Auberge de la cannebiére</h3>
+                        <p>nuit à partir de <b>25 $</b></p>
+                        <i id="change_color_star" class="fas fa-star"></i>
+                        <i id="change_color_star" class="fas fa-star"></i>
+                        <i id="change_color_star" class="fas fa-star"></i>
+                        <i id="change_color_star" class="fas fa-star"></i>
+                        <i class="far fa-star"></i>
+                    </div>
+                </div>
+                <div class="hotel_cannebiére">
+                    <img class="img_cannebiére" src="./hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg"
+                        alt="image auberge la cannebiére" />
+                    <div class="text_cannebiére">
+                        <h3>Auberge de la cannebiére</h3>
+                        <p>nuit à partir de <b>25 $</b></p>
+                        <i id="change_color_star" class="fas fa-star"></i>
+                        <i id="change_color_star" class="fas fa-star"></i>
+                        <i id="change_color_star" class="fas fa-star"></i>
+                        <i id="change_color_star" class="fas fa-star"></i>
+                        <i class="far fa-star"></i>
+                    </div>
+                </div>
+                <div class="hotel_cannebiére">
+                    <img class="img_cannebiére" src="./hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg"
+                        alt="image auberge la cannebiére" />
+                    <div class="text_cannebiére">
+                        <h3>Auberge de la cannebiére</h3>
+                        <p>nuit à partir de <b>25 $</b></p>
+                        <i id="change_color_star" class="fas fa-star"></i>
+                        <i id="change_color_star" class="fas fa-star"></i>
+                        <i id="change_color_star" class="fas fa-star"></i>
+                        <i id="change_color_star" class="fas fa-star"></i>
+                        <i class="far fa-star"></i>
+                    </div>
+                </div>
+                <div class="hotel_cannebiére">
+                    <img class="img_cannebiére" src="./hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg"
+                        alt="image auberge la cannebiére" />
+                    <div class="text_cannebiére">
+                        <h3>Auberge de la cannebiére</h3>
+                        <p>nuit à partir de <b>25 $</b></p>
+                        <i id="change_color_star" class="fas fa-star"></i>
+                        <i id="change_color_star" class="fas fa-star"></i>
+                        <i id="change_color_star" class="fas fa-star"></i>
+                        <i id="change_color_star" class="fas fa-star"></i>
+                        <i class="far fa-star"></i>
+                    </div>
+                </div>
+                <div class="hotel_cannebiére">
+                    <img class="img_cannebiére" src="./hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg"
+                        alt="image auberge la cannebiére" />
+                    <div class="text_cannebiére">
+                        <h3>Auberge de la cannebiére</h3>
+                        <p>nuit à partir de <b>25 $</b></p>
+                        <i id="change_color_star" class="fas fa-star"></i>
+                        <i id="change_color_star" class="fas fa-star"></i>
+                        <i id="change_color_star" class="fas fa-star"></i>
+                        <i id="change_color_star" class="fas fa-star"></i>
+                        <i class="far fa-star"></i>
+                    </div>
+                </div>
+
+            </div>
+            <!-- article les plus populare -->
+            <div class="section_populaire">
+                <div class="titre_populaire">
+                    <h2>les plus populaires</h2>
+                    <i class="changement_populaire fas fa-chart-line"></i>
+                </div>
+
+                <div class="hotel_populaires">
+                    <img class="img_soleil_du_matin"
+                        src="./hebergements/1_xlarge/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg"
+                        alt="image auberge la cannebiére" />
+                    <div class="text_soleil_du_matin">
+                        <h3 class="titre_soleil_du_matin">Hotel le soleil du matin</h3>
+                        <p>nuit à partir de <b>128 $</b></p>
+                        <div class="star_position_soleil_du_matin">
+                            <i id="change_color_star" class="fas fa-star"></i>
+                            <i id="change_color_star" class="fas fa-star"></i>
+                            <i id="change_color_star" class="fas fa-star"></i>
+                            <i id="change_color_star" class="fas fa-star"></i>
+                            <i class="far fa-star"></i>
+                        </div>
+                    </div>
+
+                </div>
+                <div class="hotel_populaires">
+                    <img class="img_soleil_du_matin"
+                        src="./hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg"
+                        alt="image auberge la cannebiére" />
+                    <div class="text_soleil_du_matin">
+                        <h3 class="titre_soleil_du_matin">Hotel le soleil du matin</h3>
+                        <p>nuit à partir de <b>128 $</b></p>
+                        <div class="star_position_soleil_du_matin">
+                            <i id="change_color_star" class="fas fa-star"></i>
+                            <i id="change_color_star" class="fas fa-star"></i>
+                            <i id="change_color_star" class="fas fa-star"></i>
+                            <i id="change_color_star" class="fas fa-star"></i>
+                            <i class="far fa-star"></i>
+                        </div>
+                    </div>
+
+                </div>
+                <div class="hotel_populaires">
+                    <img class="img_soleil_du_matin"
+                        src="./hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg"
+                        alt="image auberge la cannebiére" />
+                    <div class="text_soleil_du_matin">
+                        <h3 class="titre_soleil_du_matin">Hotel le soleil du matin</h3>
+                        <p>nuit à partir de <b>128 $</b></p>
+                        <div class="star_position_soleil_du_matin">
+                            <i id="change_color_star" class="fas fa-star"></i>
+                            <i id="change_color_star" class="fas fa-star"></i>
+                            <i id="change_color_star" class="fas fa-star"></i>
+                            <i id="change_color_star" class="fas fa-star"></i>
+                            <i class="far fa-star"></i>
+                        </div>
+                    </div>
+                </div>
+            </div>
+    </main>
+</body>
+
 </html>
