--- a/P2_JOURDAIN.html
+++ b/P2_JOURDAIN.html
@@ -55,16 +55,15 @@
 					type="text"
 					id="recherche"
 					name="recherche"
-					placeholder="Marseille,France"
+				b	placeholder="Marseille,France"
 				/>
 				<button class="button_researsch_right">rechercher</button>
 			</form>
 			<ul class="display_filtre">
-                <div class="">
-				<li class="spacing_filter">
+                <div class="position_filter">
                         <b>Filtres</b>
                     </div>
-                </li>
+                
 				<li class="spacing_filter">
 					<button class="button_filter">
 						<i class="icon_filter fas fa-heart"></i>
