--- a/P2_JOURDAIN.html
+++ b/P2_JOURDAIN.html
@@ -98,13 +98,15 @@
 		<main>
 			<div class="position_hebergement">
 				<div class="section_hebergements">
-					<h2 id="Hebergements" class="titre_hebergement"
+					<h2 class="titre_hebergement"
 						>Hebergement à Marseille</h2
 					>
 					<div class="hotel_cannebiére">
 						<div class="img_container">
 							<img
 								class="img_cannebiére"
+								srcset="./activites/1_xlarge/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg 1000w ,
+								./hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg 400w"
 								src="./hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg"
 								alt="image auberge la cannebiére"
 							/>
@@ -283,7 +285,7 @@
 			</div>
 			<!-- position grande activité -->
 
-			<h2 id="Hebergements" class="titre_hebergement">Activité à Marseille</h2>
+			<h2 class="titre_hebergement_activité">Activité à Marseille</h2>
 
 			<div class="global_position_activity">
 				<div class="column">
@@ -369,29 +371,33 @@
 			</div>
 		</main>
 
-		<footer>
-			<div class="footer">
-				<div class="footer_space">
-					<div>
-						<h2 class="title_footer">A propos</h2>
-					</div>
+		<footer class="footer">
+			<div class="footer_position">
+				<div class="footer_text">
+                    <div class="title_footer">
+                        <h2>A propos</h2>
+                    </div>
 					<ul>
 						<li>Fonctionement du site</li>
 						<li>Condition générales de vente</li>
 						<li>Données et confidentialité</li>
 					</ul>
 				</div>
-				<div class="footer_space">
-					<h2 class="title_footer">Nos hebergements</h2>
+				<div class="footer_text">
+                    <div class="title_footer">
+                        <h2>Nos hebergements</h2>
+                    </div>
 					<ul>
 						<li>Charte qualité</li>
 						<li>Soumetttre votre hotel</li>
 					</ul>
 				</div>
-				<div class="footer_space">
-					<h2 class="title_footer">Assistance</h2>
-					<ul>
-						<li>Centre d'aide</li>
+				<div class="footer_text">
+                    <div class="title_footer">
+                        <h2>Assistance</h2>
+                    </div>
+                        <ul>
+                            <li>Centre d'aide</li>
 						<li>Nous contacter</li>
 					</ul>
 				</div>
