--- a/P2_JOURDAIN.html
+++ b/P2_JOURDAIN.html
@@ -11,6 +11,7 @@
 			rel="stylesheet"
 		/>
 		<link rel="stylesheet" href="P2_JOURDAIN.css" />
+        <link rel="stylesheet" media="screen and (max-width: 480px)" href="Mobile_Adaptativ.css" />
 		<script
 			src="https://kit.fontawesome.com/4fa80a1b2e.js"
 			crossorigin="anonymous"
@@ -66,13 +67,13 @@
 				</div>
 				<li class="spacing_filter">
 					<button class="button_filter">
-						<i class="icon_filter fas fa-heart"></i>
+						<i class="icon_filter fas fa-money-bill-wave"></i>
 						<b> Economique</b>
 					</button>
 				</li>
 				<li class="spacing_filter">
 					<button class="button_filter">
-						<i class="icon_filter fas fa-heart"></i>
+						<i class="icon_filter fas fa-child"></i>
 						<b>Familial </b>
 					</button>
 				</li>
@@ -84,7 +85,7 @@
 				</li>
 				<li class="spacing_filter">
 					<button class="button_filter">
-						<i class="icon_filter fas fa-heart"></i>
+						<i class=" icon_filter fas fa-dog"></i>
 						<b>Animaux autorisés</b>
 					</button>
 				</li>
