Add change name repository

--- a/P2_JOURDAIN.html
+++ b/P2_JOURDAIN.html
@@ -43,8 +43,10 @@
 		</header>
 		<!--Section -->
 		<section>
-			<h1>Trouvez votre hebergement pour des vacances de reves</h1>
-			<p>en plein centre ville ou en pleine nature</p>
+			<div class="text_section">
+				<h1>Trouvez votre hebergement pour des vacances de reves</h1>
+				<p>en plein centre ville ou en pleine nature</p>
+			</div>
 
 			<!--barre de recherche Header-->
 			<form class="barre_recherche" method="post" action="....">
@@ -78,7 +80,7 @@
 					</button>
 				</li>
 				<li class="spacing_filter">
-					<button class="button_filter">
+					<button class="romatique button_filter">
 						<i class="icon_filter fas fa-heart"></i>
 						<b>Romantique</b>
 					</button>
