--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
 			<ul>
 				<!--add links-->
 
-				<li class="change_color">
+				<li class="hebergement_order change_color">
 					<a class="change_hypertext" href="#Hebergements"> Hebergements</a>
 				</li>
-				<li>
+				<li class="activités_order">
 					<a class="change_hypertext1" href="#">Activités</a>
 				</li>
-				<li class="change_color">
+				<li class="inscrire_order  change_color">
 					<a class="change_hypertext" href="">S'inscrire</a>
 				</li>
 			</ul>
