--- a/index.html
+++ b/index.html
@@ -61,25 +61,33 @@
 				<div class="position_button">
 					<li class="spacing_filter">
 						<button class="button_filter">
-							<i class="icon_filter fas fa-money-bill-wave"></i>
+							<div class="circle_filter">
+								<i class="icon_filter fas fa-money-bill-wave"></i>
+							</div>
 							<b> Economique</b>
 						</button>
 					</li>
 					<li class="spacing_filter">
 						<button class="button_filter">
-							<i class="icon_filter fas fa-child"></i>
+							<div class="circle_filter">
+								<i class="icon_filter fas fa-child"></i>
+							</div>
 							<b>Familial </b>
 						</button>
 					</li>
 					<li class="spacing_filter">
 						<button class="romatique button_filter">
-							<i class="icon_filter fas fa-heart"></i>
+							<div class="circle_filter">
+								<i class="icon_filter fas fa-heart"></i>
+							</div>
 							<b>Romantique</b>
 						</button>
 					</li>
 					<li class="spacing_filter">
 						<button class="button_filter">
-							<i class="icon_filter fas fa-dog"></i>
+							<div class="circle_filter">
+								<i class="icon_filter fas fa-dog"></i>
+							</div>
 							<b>Animaux autorisés</b>
 						</button>
 					</li>
@@ -96,10 +104,8 @@
 				<h2 class="titre_hebergement">Hebergement à Marseille</h2>
 				<div class="hotel_cannebiére">
 					<div class="img_container">
-						<img class="img_cannebiére" srcset="
-								./activites/1_xlarge/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg 1000w,
-									./hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg       400w
-									" src="./hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="image auberge la cannebiére" />
+						<img class="img_cannebiére" 
+									 src="./hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="image auberge la cannebiére" />
 					</div>
 					<div class="text_cannebiére">
 						<h3>Auberge de la cannebiére</h3>
@@ -117,8 +123,8 @@
 							alt="image auberge la cannebiére" />
 					</div>
 					<div class="text_cannebiére">
-						<h3>Auberge de la cannebiére</h3>
-						<p>nuit à partir de <b>25 €</b></p>
+						<h3>Hôtel du port</h3>
+						<p>nuit à partir de <b>52 €</b></p>
 						<i id="change_color_star" class="fas fa-star"></i>
 						<i id="change_color_star" class="fas fa-star"></i>
 						<i id="change_color_star" class="fas fa-star"></i>
@@ -132,7 +138,7 @@
 							alt="image auberge la cannebiére" />
 					</div>
 					<div class="text_cannebiére">
-						<h3>Auberge de la cannebiére</h3>
+						<h3>Hôtel les mouettes</h3>
 						<p>nuit à partir de <b>25 €</b></p>
 						<i id="change_color_star" class="fas fa-star"></i>
 						<i id="change_color_star" class="fas fa-star"></i>
@@ -147,8 +153,8 @@
 							alt="image auberge la cannebiére" />
 					</div>
 					<div class="text_cannebiére">
-						<h3>Auberge de la cannebiére</h3>
-						<p>nuit à partir de <b>25 €</b></p>
+						<h3>Hôtel de la mer</h3>
+						<p>nuit à partir de <b>46 €</b></p>
 						<i id="change_color_star" class="fas fa-star"></i>
 						<i id="change_color_star" class="fas fa-star"></i>
 						<i id="change_color_star" class="fas fa-star"></i>
@@ -162,7 +168,7 @@
 							alt="image auberge la cannebiére" />
 					</div>
 					<div class="text_cannebiére">
-						<h3>Auberge de la cannebiére</h3>
+						<h3>Auberge le panier</h3>
 						<p>nuit à partir de <b>25 €</b></p>
 						<i id="change_color_star" class="fas fa-star"></i>
 						<i id="change_color_star" class="fas fa-star"></i>
@@ -178,7 +184,7 @@
 							alt="image auberge la cannebiére" />
 					</div>
 					<div class="text_cannebiére">
-						<h3>Auberge de la cannebiére</h3>
+						<h3>Hôtel chez Amina</h3>
 						<p>nuit à partir de <b>25 €</b></p>
 						<i id="change_color_star" class="fas fa-star"></i>
 						<i id="change_color_star" class="fas fa-star"></i>
@@ -199,7 +205,7 @@
 				<div class="hotel_populaires">
 					<div class="img_container_populaire">
 						<img class="img_soleil_du_matin"
-							src="./hebergements/3_medium/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg"
+							src="./hebergements/1_xlarge/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg"
 							alt="image auberge la cannebiére" />
 					</div>
 
@@ -218,12 +224,12 @@
 				<div class="hotel_populaires">
 					<div class="img_container_populaire">
 						<img class="img_soleil_du_matin"
-							src="./hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg"
+							src="./hebergements/1_xlarge/aw-creative-VGs8z60yT2c-unsplash.jpg"
 							alt="image auberge la cannebiére" />
 					</div>
 					<div class="text_soleil_du_matin">
-						<h3 class="titre_soleil_du_matin">Hotel le soleil du matin</h3>
-						<p>nuit à partir de <b>128 €</b></p>
+						<h3 class="titre_soleil_du_matin">Au coeur de l'eau Chambres d'hôtes</h3>
+						<p>nuit à partir de <b>71 €</b></p>
 						<div class="star_position_soleil_du_matin">
 							<i id="change_color_star" class="fas fa-star"></i>
 							<i id="change_color_star" class="fas fa-star"></i>
@@ -236,11 +242,11 @@
 				<div class="hotel_populaires">
 					<div class="img_container_populaire">
 						<img class="img_soleil_du_matin"
-							src="./hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg"
+							src="./hebergements/1_xlarge/febrian-zakaria-M6S1WvfW68A-unsplash.jpg"
 							alt=" image auberge la cannebiére" />
 					</div>
 					<div class="text_soleil_du_matin">
-						<h3 class="titre_soleil_du_matin">Hotel le soleil du matin</h3>
+						<h3 class="titre_soleil_du_matin">Hôtel Tout bleu et Blanc</h3>
 						<p>nuit à partir de <b>128 €</b></p>
 						<div class="star_position_soleil_du_matin">
 							<i id="change_color_star" class="fas fa-star"></i>
@@ -332,9 +338,9 @@
 					<h2>A propos</h2>
 				</div>
 				<ul>
-					<li>Fonctionement du site</li>
-					<li>Condition générales de vente</li>
-					<li>Données et confidentialité</li>
+					<li><a class="Hypertext_footer" href="">Fonctionement du site</a></li>
+					<li><a class="Hypertext_footer" href="">Condition générales de vente</a></li>
+					<li><a class="Hypertext_footer"href="">Données et confidentialité</a></li>
 				</ul>
 			</div>
 			<div class="footer_text">
@@ -342,8 +348,8 @@
 					<h2>Nos hebergements</h2>
 				</div>
 				<ul>
-					<li>Charte qualité</li>
-					<li>Soumetttre votre hotel</li>
+					<li><a class="Hypertext_footer" href="">Charte qualité</a></li>
+					<li><a class="Hypertext_footer"href="">Soumetttre votre hotel</a></li>
 				</ul>
 			</div>
 			<div class="footer_text">
@@ -351,8 +357,8 @@
 					<h2>Assistance</h2>
 				</div>
 				<ul>
-					<li>Centre d'aide</li>
-					<li>Nous contacter</li>
+					<li><a class="Hypertext_footer" href="">Centre d'aide</a></li>
+					<li><a class="Hypertext_footer" href="">Nous contacter</a></li>
 				</ul>
 			</div>
 		</div>
