--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
 				<div class="hotel_cannebiére">
 					<div class="img_container">
 						<img class="img_cannebiére"
-							src="./hebergements/3_medium/febrian-zakaria-M6S1WvfW68A-unsplash.jpg"
+							src="./hebergements/1_xlarge/febrian-zakaria-sjvU0THccQA-unsplash.jpg"
 							alt="image auberge la cannebiére" />
 					</div>
 					<div class="text_cannebiére">
@@ -223,7 +223,7 @@
 				</div>
 				<div class="hotel_populaires">
 					<div class="img_container_populaire">
-						<img class="img_soleil_du_matin"
+						<img class="img_eau"
 							src="./hebergements/1_xlarge/aw-creative-VGs8z60yT2c-unsplash.jpg"
 							alt="image auberge la cannebiére" />
 					</div>
@@ -241,7 +241,7 @@
 				</div>
 				<div class="hotel_populaires">
 					<div class="img_container_populaire">
-						<img class="img_soleil_du_matin"
+						<img class="img_blanc"
 							src="./hebergements/1_xlarge/febrian-zakaria-sjvU0THccQA-unsplash.jpg"
 							alt=" image auberge la cannebiére" />
 					</div>
