add link hypertext

--- a/index.html
+++ b/index.html
@@ -103,21 +103,25 @@
 			<section class="section_hebergements">
 				<h2 class="titre_hebergement">Hebergement à Marseille</h2>
 				<div class="hotel_cannebiére">
-					<div class="img_container">
-						<img class="img_cannebiére" src="./hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg"
-							alt="image auberge la cannebiére" />
+						<a class="lien_Hebergements" href="">
+						<div class="img_container">
+							<img class="img_cannebiére"
+								src="./hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg"
+								alt="image auberge la cannebiére" />
+						</div>
+						<div class="text_cannebiére">
+							<h3>Auberge de la cannebiére</h3>
+							<p>nuit à partir de <b>25€ </b></p>
+							<i id="change_color_star" class="fas fa-star"></i>
+							<i id="change_color_star" class="fas fa-star"></i>
+							<i id="change_color_star" class="fas fa-star"></i>
+							<i id="change_color_star" class="fas fa-star"></i>
+							<i class="far fa-star"></i>
+						</div>
+					</a>
 					</div>
-					<div class="text_cannebiére">
-						<h3>Auberge de la cannebiére</h3>
-						<p>nuit à partir de <b>25€ </b></p>
-						<i id="change_color_star" class="fas fa-star"></i>
-						<i id="change_color_star" class="fas fa-star"></i>
-						<i id="change_color_star" class="fas fa-star"></i>
-						<i id="change_color_star" class="fas fa-star"></i>
-						<i class="far fa-star"></i>
-					</div>
-				</div>
 				<div class="hotel_cannebiére">
+					<a class="lien_Hebergements" href="">
 					<div class="img_container">
 						<img class="img_cannebiére" src="./hebergements/3_medium/fred-kleber-gTbaxaVLvsg-unsplash.jpg"
 							alt="image auberge la cannebiére" />
@@ -131,8 +135,10 @@
 						<i id="change_color_star" class="fas fa-star"></i>
 						<i id="change_color_star" class="fas fa-star"></i>
 					</div>
+				</a>
 				</div>
 				<div class="hotel_cannebiére">
+					<a class="lien_Hebergements" href="">
 					<div class="img_container">
 						<img class="img_cannebiére" src="./hebergements/3_medium/reisetopia-B8WIgxA_PFU-unsplash.jpg"
 							alt="image auberge la cannebiére" />
@@ -146,8 +152,10 @@
 						<i id="change_color_star" class="fas fa-star"></i>
 						<i class="far fa-star"></i>
 					</div>
+				</a>
 				</div>
 				<div class="hotel_cannebiére">
+					<a class="lien_Hebergements" href="">
 					<div class="img_container">
 						<img class="img_cannebiére" src="./hebergements/3_medium/annie-spratt-Eg1qcIitAuA-unsplash.jpg"
 							alt="image auberge la cannebiére" />
@@ -161,8 +169,10 @@
 						<i class="far fa-star"></i>
 						<i class="far fa-star"></i>
 					</div>
+				</a>
 				</div>
 				<div class="hotel_cannebiére">
+					<a class="lien_Hebergements" href="">
 					<div class="img_container">
 						<img class="img_cannebiére" src="./hebergements/3_medium/nicate-lee-kT-ZyaiwBe0-unsplash.jpg"
 							alt="image auberge la cannebiére" />
@@ -176,8 +186,10 @@
 						<i id="change_color_star" class="fas fa-star"></i>
 						<i class="far fa-star"></i>
 					</div>
+				</a>
 				</div>
 				<div class="hotel_cannebiére">
+					<a class="lien_Hebergements" href="">
 					<div class="img_container">
 						<img class="img_cannebiére"
 							src="./hebergements/1_xlarge/febrian-zakaria-sjvU0THccQA-unsplash.jpg"
@@ -192,6 +204,7 @@
 						<i id="change_color_star" class="fas fa-star"></i>
 						<i id="change_color_star" class="fas fa-star"></i>
 					</div>
+				</a>
 				</div>
 				<p> <b>Afficher plus </b></p>
 			</section>
@@ -203,6 +216,7 @@
 				</div>
 
 				<div class="hotel_populaires">
+					<a class="lien_Hebergements_pop" href="">
 					<div class="img_container_populaire">
 						<img class="img_soleil_du_matin"
 							src="./hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg"
@@ -220,8 +234,10 @@
 							<i id="change_color_star" class="fas fa-star"></i>
 						</div>
 					</div>
+				</a>
 				</div>
 				<div class="hotel_populaires">
+					<a class="lien_Hebergements_pop" href="">
 					<div class="img_container_populaire">
 						<img class="img_eau" src="./hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg"
 							alt="image auberge la cannebiére" />
@@ -237,8 +253,10 @@
 							<i class="far fa-star"></i>
 						</div>
 					</div>
+				</a>
 				</div>
 				<div class="hotel_populaires">
+					<a class="lien_Hebergements_pop" href="">
 					<div class="img_container_populaire">
 						<img class="img_blanc" src="./hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg"
 							alt=" image auberge la cannebiére" />
@@ -254,6 +272,7 @@
 							<i class="far fa-star"></i>
 						</div>
 					</div>
+				</a>
 				</div>
 
 			</section>
@@ -264,6 +283,7 @@
 
 			<div class="global_position_activity">
 				<div class="column">
+					<a class="lien_Hebergements" href="">
 					<div class="container_text_image_activity">
 						<div class="img_container_activity">
 							<img class="big_image size_image"
@@ -273,9 +293,11 @@
 							<b>vieux port</b>
 						</div>
 					</div>
+				</a>
 				</div>
 				<div class="column">
 					<div class="container_text_image_activity">
+						<a class="lien_Hebergements" href="">
 						<div class="img_container_activity">
 							<img class="midle_image size_image"
 								src="activites/1_xlarge/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="" />
@@ -283,8 +305,10 @@
 						<div class="text_activity">
 							<b>Fort de pomégues</b>
 						</div>
+					</a>
 					</div>
 					<div class="container_text_image_activity">
+						<a class="lien_Hebergements" href="">
 						<div class="img_container_activity">
 							<img class="small_image size_image"
 								src="activites/1_xlarge/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="" />
@@ -292,9 +316,11 @@
 						<div class="text_activity">
 							<b>Ile du frioul</b>
 						</div>
+					</a>
 					</div>
 				</div>
 				<div class="column">
+					<a class="lien_Hebergements" href="">
 					<div class="container_text_image_activity">
 						<div class="img_container_activity">
 							<img class="big_image size_image"
@@ -304,9 +330,11 @@
 							<b>Parc national des calanques</b>
 						</div>
 					</div>
+				</a>
 				</div>
 				<div class="column">
 					<div class="container_text_image_activity">
+						<a class="lien_Hebergements" href="">
 						<div class="img_container_activity">
 							<img class="small_image size_image"
 								src="activites/2_large/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="" />
@@ -314,8 +342,10 @@
 						<div class="text_activity">
 							<b>Notre-dame-de-la-garde</b>
 						</div>
+					</a>
 					</div>
 					<div class="container_text_image_activity">
+						<a class="lien_Hebergements" href="">
 						<div class="img_container_activity">
 							<img class="midle_image size_image"
 								src="activites/2_large/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="" />
@@ -323,6 +353,7 @@
 						<div class="text_activity">
 							<b>Parc longchamp</b>
 						</div>
+					</a>
 					</div>
 				</div>
 			</div>
